fixes top spacing on mobile view lobby page

--- a/public/assets/css/custom.less
+++ b/public/assets/css/custom.less
@@ -6649,6 +6649,7 @@ img {
       display: none;
     }
     .section-3{
+      margin-top:0px;
       .box-3{
         margin-top:100px !important;
       }
